--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "@azure/storage-blob": "^12.9.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "dotenv": "^16.0.0",
-    "multer": "^1.4.4",
+    "@types/multer": "^1.4.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
